<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="142dp"
            android:layout_marginLeft="142dp"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="141dp"
            android:layout_marginRight="141dp"
            android:contentDescription="@string/todo"
            tools:srcCompat="@tools:sample/avatars" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_error"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="166dp"
            android:layout_height="35dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="123dp"
            android:layout_marginLeft="123dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="122dp"
            android:layout_marginRight="122dp"
            android:gravity="center"
            android:text="@string/skip_the_service"
            android:textColor="#303030"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/createUserButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="164dp"
            android:layout_marginLeft="164dp"
            android:layout_marginEnd="159dp"
            android:layout_marginRight="159dp"
            android:layout_marginBottom="254dp"
            android:background="@color/design_default_color_error"
            android:onClick="signInOnClick"
            android:text="@string/sign_in"
            android:textColor="@color/black"
            app:backgroundTint="@color/design_default_color_error" />

        <EditText
            android:id="@+id/password"
            android:layout_width="242dp"
            android:layout_height="62dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="85dp"
            android:layout_marginLeft="85dp"
            android:layout_marginEnd="84dp"
            android:layout_marginRight="84dp"
            android:layout_marginBottom="318dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/username"
            android:layout_width="240dp"
            android:layout_height="70dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="86dp"
            android:layout_marginLeft="86dp"
            android:layout_marginEnd="85dp"
            android:layout_marginRight="85dp"
            android:layout_marginBottom="393dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/registerButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="106dp"
            android:layout_marginRight="106dp"
            android:layout_marginBottom="200dp"
            android:onClick="registerButtonClick"
            android:text="@string/no_account_register"
            android:textColor="@color/black"
            app:backgroundTint="@color/white" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>