...
                android:onClick="onClick"
                android:text="@string/next"
                android:textColor="@color/white"
                app:backgroundTint="@color/design_default_color_error" />

            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
...
