...
                android:onClick="onClick"
                android:text="@string/edit"
                android:textColor="@color/white"
                app:backgroundTint="@color/design_default_color_error" />

            <Button
                android:id="@+id/viewFavorite"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="13dp"
...
